<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createaccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background2"
    android:orientation="vertical"
    android:visibility="visible">-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/app_background2"
    android:layout_height="match_parent"
    tools:context=".Create_Account">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:id="@+id/greeting"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_air_music"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/textView15"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_create_your_account"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/usernametxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Full Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:maxLength="12"
        android:ems="10"
        android:inputType="text|textPersonName"
        android:textColorHint="#C0C0C0"
        android:textColor="#C0C0C0"
        android:backgroundTint="#C0C0C0"
        android:singleLine="true"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <TextView
        android:id="@+id/passwordtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/password_req"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="*between 8-12 characters, at least 1 number and captial letter"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklzxvcbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:ems="10"
        android:maxLength="12"
        android:importantForAutofill="no"
        android:inputType="text|textPassword"
        android:textColorHint="#C0C0C0"
        android:textColor="#C0C0C0"
        android:backgroundTint="#C0C0C0"
        android:singleLine="true"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/confirmtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklzxvcbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text|textPassword"
        android:textColorHint="#C0C0C0"
        android:textColor="#C0C0C0"
        android:backgroundTint="#C0C0C0"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <TextView
        android:id="@+id/emailtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"

        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:typeface="normal"
        android:visibility="visible" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#C0C0C0"
        android:textColor="#C0C0C0"
        android:backgroundTint="#C0C0C0"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confrim Email"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:typeface="normal"
        android:visibility="visible" />

    <EditText
        android:id="@+id/confirmemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#C0C0C0"
        android:textColor="#C0C0C0"
        android:backgroundTint="#C0C0C0"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/signin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#C0C0C0"
        android:clickable="true"
        android:onClick="onButtonClick"
        android:text="@string/sign_in"
        android:visibility="visible" />
    </LinearLayout>
    </ScrollView>

<!--</LinearLayout>-->
</android.support.constraint.ConstraintLayout>